Fix Bar toggles and collapsed styles

--- a/Source/Blazorise.FluentUI2/Styles/components/_bar.scss
+++ b/Source/Blazorise.FluentUI2/Styles/components/_bar.scss
@@ -33,12 +33,11 @@
         margin-bottom: 0;
         list-style: none;
     }
-
-    .fui-NavigationBar__link,
+    /*.fui-NavigationBar__link,
     .fui-NavigationBar__dropdown-toggle {
         padding-right: 0;
         padding-left: 0;
-    }
+    }*/
 
     .fui-NavigationBar__dropdown {
         position: relative;
@@ -249,30 +248,142 @@
     padding: var(--spacingVerticalS) var(--spacingHorizontalS);
     font-size: var(--fontSizeBase200);
     line-height: var(--lineHeightBase200);
-    background-color: red /*transparent*/; // remove default button style
-    /*border: $border-width solid transparent; // remove default button style*/
-    /*@include border-radius($navbar-toggler-border-radius);*/
+    background-color: transparent;
 
     &:hover,
     &:focus {
         text-decoration: none;
     }
 }
-/*
-.fui-NavigationBar__toggler__icon {
-    display: inline-block;
-    width: 1.5em;
-    height: 1.5em;
-    vertical-align: middle;
-    content: "";
-    background: 50% / 100% 100% no-repeat;
-}*/
-
 
 .fui-NavigationBar__menu {
     &:not(.fui-NavigationBar__menu-show) {
         display: none;
     }
+}
+
+.fui-NavigationBar__dropdown-menu {
+    position: absolute;
+}
+
+.fui-NavigationBar__item,
+.fui-NavigationBar__dropdown {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    color: var(--colorNeutralForeground2);
+    box-sizing: border-box;
+    text-wrap: nowrap;
+    width: 100%;
+
+    .fui-NavigationBar__link,
+    .fui-NavigationBar__dropdown-toggle {
+        &:hover {
+            color: var(--colorNeutralForeground2Hover);
+            background-color: var(--colorSubtleBackgroundHover);
+            border-bottom-color: transparent;
+            border-left-color: transparent;
+            border-right-color: transparent;
+            border-top-color: transparent;
+            background-color: var(--colorNeutralBackground1Hover);
+            /*border-color: var(--colorNeutralStroke1Hover);*/
+            color: var(--colorNeutralForeground1Hover);
+            cursor: pointer;
+
+            &:active {
+                color: var(--colorNeutralForeground2Pressed);
+                background-color: var(--colorSubtleBackgroundPressed);
+                border-bottom-color: transparent;
+                border-left-color: transparent;
+                border-right-color: transparent;
+                border-top-color: transparent;
+                background-color: var(--colorNeutralBackground1Pressed);
+                /*border-color: var(--colorNeutralStroke1Pressed);*/
+                color: var(--colorNeutralForeground1Pressed);
+                outline-style: none;
+            }
+        }
+
+        &.fui-Link-active {
+            font-weight: var(--fontWeightSemibold);
+
+            &:hover {
+                cursor: auto;
+                color: var(--colorNeutralForeground2);
+                background-color: var(--colorTransparentBackground);
+                border-bottom-color: transparent;
+                border-left-color: transparent;
+                border-right-color: transparent;
+                border-top-color: transparent;
+
+                &:active {
+                    cursor: auto;
+                    color: var(--colorNeutralForeground2);
+                    background-color: var(--colorTransparentBackground);
+                    border-bottom-color: transparent;
+                    border-left-color: transparent;
+                    border-right-color: transparent;
+                    border-top-color: transparent;
+                    outline-style: none;
+                }
+            }
+        }
+    }
+}
+
+.fui-NavigationBar__brand {
+    display: inline-block;
+    padding-bottom: var(--spacingHorizontalSNudge);
+    padding-left: var(--spacingHorizontalSNudge);
+    padding-right: var(--spacingHorizontalSNudge);
+    padding-top: var(--spacingHorizontalSNudge);
+    /*margin-right: var(--spacingHorizontalS);*/
+    font-size: var(--fontSizeBase400);
+    line-height: inherit;
+    white-space: nowrap;
+
+    .fui-Link.fui-NavigationBar__link {
+        font-size: inherit;
+    }
+
+    &:hover,
+    &:focus {
+        text-decoration: none;
+    }
+}
+
+.fui-Link.fui-NavigationBar__link,
+.fui-NavigationBar__dropdown-toggle {
+    align-items: center;
+    background-color: var(--colorSubtleBackground);
+    border-bottom-color: transparent;
+    border-left-color: transparent;
+    border-radius: var(--borderRadiusMedium);
+    border-right-color: transparent;
+    border-top-color: transparent;
+    box-sizing: border-box;
+    color: var(--colorNeutralForeground2);
+    display: inline-flex;
+    font-family: var(--fontFamilyBase);
+    font-size: var(--fontSizeBase300);
+    font-weight: var(--fontWeightRegular);
+    height: 32px;
+    justify-content: center;
+    line-height: var(--lineHeightBase300);
+    margin: 0px;
+    min-width: unset;
+    outline-style: none;
+    overflow: hidden;
+    padding-bottom: var(--spacingHorizontalSNudge);
+    padding-left: var(--spacingHorizontalSNudge);
+    padding-right: var(--spacingHorizontalSNudge);
+    padding-top: var(--spacingHorizontalSNudge);
+    text-decoration-line: none;
+    text-wrap: nowrap;
+    transition-duration: var(--durationFaster);
+    transition-property: background, border, color;
+    transition-timing-function: var(--curveEasyEase);
+    vertical-align: middle;
 }
 
 .fui-NavigationBar-expand {
@@ -396,7 +507,7 @@
                     }
                 }
 
-                .fui-NavigationBar__link,
+                .fui-Link.fui-NavigationBar__link,
                 .fui-NavigationBar__dropdown-toggle {
                     align-items: center;
                     background-color: var(--colorSubtleBackground);
@@ -418,7 +529,6 @@
                     min-width: unset;
                     outline-style: none;
                     overflow: hidden;
-                    padding: 5px var(--spacingHorizontalM);
                     padding-bottom: var(--spacingHorizontalSNudge);
                     padding-left: var(--spacingHorizontalSNudge);
                     padding-right: var(--spacingHorizontalSNudge);
